plugins {
    id 'java'
    id 'checkstyle'
}

group = 'com.padtools'
version = '2.1'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
    maven { url = uri('https://oss.sonatype.org/service/local/repositories/releases/content/') }
}

dependencies {
    implementation 'org.apache.xmlgraphics:batik-svggen:1.17'
    implementation 'org.apache.xmlgraphics:batik-dom:1.17'
    // ベクター SVG プレビュー用: PlantUML が出力した SVG を GraphicsNode として
    // 直接 Swing に描画するため Batik bridge を取り込む (transitively pulls in
    // batik-anim / batik-bridge / batik-gvt / batik-css)。
    implementation 'org.apache.xmlgraphics:batik-bridge:1.17'
    implementation 'com.rover12421.opensource:JFontChooser:1.0.5-3'
    // PlantUML (GPLv3). UML 系出力を SVG として直接書き出すために同梱する。
    // graphviz/dot は不要 (PlantUmlRenderer が Smetana レイアウトを自動指定)。
    implementation 'net.sourceforge.plantuml:plantuml:1.2026.2'
    // ASM: 依存 JAR/AAR からクラスヘッダ (名前・superclass・interfaces・public members)
    // を読み取り、シーケンス図/クラス図に外部クラスを表示するために使用する。
    // .class バイトコードは SKIP_CODE で読み飛ばし、ヘッダ情報のみを抽出する。
    implementation 'org.ow2.asm:asm:9.7'
    // SQLite (Apache 2.0). 解析結果の永続インデックス (~/.padtools/cache/<hash>/index.db)
    // の格納先。fat jar に同梱され、JDBC 経由で参照関係・外部境界・コンポーネント集約を
    // 横断クエリ可能にする。native lib は jar 内の META-INF から自動展開される。
    implementation 'org.xerial:sqlite-jdbc:3.46.1.3'
    // JavaParser + JavaSymbolSolver (LGPL-3.0 OR Apache-2.0 のデュアル → Apache-2.0 を選択)。
    // Java ソースの正規フロントエンド。完全な構文 AST に加え、SymbolSolver で
    // 型・オーバーロード・継承・チェーン呼び出しを解決し、逆参照/シーケンス図の精度を上げる。
    // symbol-solver-core が javaparser-core を推移取得する。native lib なし。
    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.26.4'
    testImplementation 'junit:junit:4.13.2'
    // Playwright (ブラウザ自動化) で生成 SVG をレンダリング・スナップショット検証する。
    // 初回テスト実行時に `playwright install chromium` がトリガーされ Chromium が
    // ~/.cache/ms-playwright 配下にダウンロードされる (~150MB)。
    testImplementation 'com.microsoft.playwright:playwright:1.49.0'
    // AssertJ-Swing で UmlMainFrame の Swing UI を Robot 経由でテストする。
    testImplementation 'org.assertj:assertj-swing-junit:3.17.1'
}

def defaultEncoding = 'UTF-8'
tasks.withType(JavaCompile).configureEach {
    options.encoding = defaultEncoding
    // JDK 21+ でビルドしても Java 17 の API シグネチャに対してコンパイル検証する。
    // これがないと List.getFirst() など Java 21 で追加された API が紛れ込み、
    // 実際に JDK 17 でビルドしたユーザー環境でだけ "cannot find symbol" になる。
    options.release = 17
}

test {
    useJUnit()
    testLogging {
        events 'passed', 'skipped', 'failed'
        showStandardStreams = false
    }

    // Swing GUI テスト (AssertJ-Swing) と Playwright Chromium 用の環境調整。
    // - DISPLAY が設定されていなければ Swing GUI テストは Assume.assumeFalse で skip。
    //   ローカル/CI でも実行したい場合は `xvfb-run -a ./gradlew test` でラップ。
    // - Playwright は ~/.cache/ms-playwright に Chromium をダウンロードする。
    //   ネットワーク制限環境では Playwright.create() が失敗し、
    //   PlantUmlSvgPlaywrightTest は Assume.assumeNoException で skip となる。
    systemProperty 'java.awt.headless',
            (System.getenv('DISPLAY') != null ? 'false' : 'true')
}

jar {
    archiveFileName = 'PadTools.jar'
    manifest {
        attributes 'Main-Class': 'padtools.Main'
    }

    // 依存ライブラリを同梱して単体実行可能な fat jar にする。
    // 各依存 jar の META-INF/*.SF, *.DSA, *.RSA は署名検証で衝突を起こすので除外する。
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

checkstyle {
    toolVersion = '10.21.1'
    configFile = file("${projectDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = false
    maxWarnings = 0
}

tasks.named('checkstyleMain') { source = 'src/main/java' }
tasks.named('checkstyleTest') { source = 'src/test/java' }

// `PadTools.jar` は単体で動く fat jar なので、配布 zip には起動補助ファイル
// (Windows/Unix 起動スクリプト、デフォルト設定) と jar 本体だけを含める。
// bundle/graphviz/ に dot バイナリが置かれていれば自動的に同梱される。
tasks.register('makeZip', Zip) {
    dependsOn 'jar'
    outputs.upToDateWhen { false }

    from 'bundle'
    from 'build/libs/PadTools.jar'
}

// --- Graphviz バイナリ同梱ヘルパー ---
// 以下のタスクを手動実行して bundle/graphviz/ に dot バイナリを配置する。
// 配置後は makeZip / jar を実行すれば ZIP に自動同梱される。
//
// Linux/Mac ユーザーは OS のパッケージマネージャ (apt/brew) でインストール済みの
// dot バイナリを手動コピーするか、後述の copySystemDot タスクを使う。
// Windows 用は graphviz.org の portable zip から dot.exe と依存 DLL をコピーする:
//   https://graphviz.org/download/
//   -> Windows の "Stable 64-bit EXE installer" または zip を展開して
//      bin/dot.exe, *.dll を bundle/graphviz/windows-amd64/ に配置する。

// システムインストール済みの dot を Linux/Mac 向けに bundle/graphviz/ へコピーする。
// (静的リンクバイナリでなければ他マシンでは動作しない点に注意)
tasks.register('copySystemDot') {
    description = 'システム PATH 上の dot バイナリを bundle/graphviz/ へコピーする (動作確認用)'
    group = 'graphviz'
    doLast {
        def dotPath = ['dot'].collect { cmd ->
            def found = System.getenv('PATH')?.split(File.pathSeparator)?.collect { dir ->
                new File(dir, cmd)
            }?.find { it.canExecute() }
            found?.absolutePath
        }.find { it != null }

        if (dotPath == null) {
            throw new GradleException('dot コマンドが PATH 上に見つかりません。graphviz をインストールしてください。')
        }

        def os = System.getProperty('os.name', '').toLowerCase()
        def arch = System.getProperty('os.arch', '').toLowerCase()
        def archNorm = (arch.contains('aarch') || arch.contains('arm64')) ? 'aarch64' : 'amd64'
        def platform = os.contains('mac') ? "mac-$archNorm" : "linux-$archNorm"
        def destDir = file("bundle/graphviz/$platform")
        destDir.mkdirs()

        copy {
            from dotPath
            into destDir
        }
        println "Copied dot to $destDir (PATH: $dotPath)"
        println "Note: このバイナリは動的リンクのため、同一 OS/ライブラリ環境でのみ動作します。"
    }
}
